--- a/style_login.css
+++ b/style_login.css
@@ -60,6 +60,23 @@ a {
     line-height: 20px;
 }
 
+/**************
+ * LOGIN FORM *
+ **************/
+
+.login-greet {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+    color: #27303E;
+}
+
+.login-msg {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #6F757E;
+}
 .login-container {
     width: 480px;
 }
