--- a/style_login.css
+++ b/style_login.css
@@ -21,7 +21,9 @@ a {
     max-width: 1280px;
     margin: 0 auto;
 }
-
+.mdl-layout {
+    height: auto;
+}
 /**********
  * HEADER *
  **********/
@@ -78,12 +80,12 @@ a {
     color: #6F757E;
 }
 .login-container {
-    width: 480px;
+    max-width: 480px;
 }
 
 .login-form {
     background: #ffffff;
-    padding: 45px;
+    padding: 30px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
         0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     border-radius: 6px;
@@ -98,12 +100,18 @@ a {
 .login-form-title {
     display: flex;
     flex-direction: column;
+    
 }
-
+.login-step {
+    margin-left: 20px;
+}
 .login-form-title>label {
     font-size: 28px;
     font-weight: 400;
     margin-bottom: 5px;
+    font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
 }
 
 .login-form-title>span {
@@ -444,4 +452,24 @@ a:focus {
 
 .hidePassword {
     display: none;
+}
+/**********************
+ * HEADER MOBILE VIEW *
+ **********************/
+@media (max-width: 820px) {
+    /* Enable sticky to stick the nav bar to the top*/
+
+    /* .header {
+        position: sticky;
+        top: 0;
+        z-index: 999;
+    } */
+
+    .header-logo {
+        margin-left: 20px;
+    }
+
+    .header-menu {
+        display: none;
+    }
 }
