--- a/style_login.css
+++ b/style_login.css
@@ -21,9 +21,11 @@ a {
     max-width: 1280px;
     margin: 0 auto;
 }
+
 .mdl-layout {
     height: auto;
 }
+
 /**********
  * HEADER *
  **********/
@@ -79,38 +81,42 @@ a {
     line-height: 24px;
     color: #6F757E;
 }
+
 .login-container {
-    max-width: 480px;
+    width: 80%;
+        max-width: 500px;
 }
 
 .login-form {
-    background: #ffffff;
     padding: 30px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-        0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    border-radius: 6px;
+        border-radius: 8px;
+            background: #FFFFFF;
+            box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
 }
 
 .login-form form {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
+
 }
 
 .login-form-title {
     display: flex;
     flex-direction: column;
-    
+
 }
+
 .login-step {
     margin-left: 20px;
 }
+
 .login-form-title>label {
     font-size: 28px;
     font-weight: 400;
     margin-bottom: 5px;
     font-weight: 400;
-        font-size: 14px;
+    font-size: 14px;
         line-height: 24px;
 }
 
@@ -453,6 +459,7 @@ a:focus {
 .hidePassword {
     display: none;
 }
+
 /**********************
  * HEADER MOBILE VIEW *
  **********************/
