--- a/style_login.css
+++ b/style_login.css
@@ -158,10 +158,15 @@ a {
 }
 
 .login-form-content .input-textfield input {
-    border: 1px solid #e1e4e8;
-    padding: 10px;
-    font-size: 12px;
+    border: 1px solid #E7E8E9;
+        border-radius: 8px;
+        padding: 16px 12px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        color: #6F757E
 }
+
 
 .login-error-info {
     font-weight: bold;
@@ -193,7 +198,6 @@ a:focus {
 
 .social-login-buttons {
     margin-top: 10px;
-    font-family: 'Rubik', sans-serif !important;
 }
 
 .social-login-buttons a {
@@ -219,13 +223,12 @@ a:focus {
     min-width: 100px;
     color: #fff;
     padding: 0 22px;
-    background-color: #54a346;
+    background: #2C6C7B;
     border-radius: 5px;
-    font-family: 'Rubik', sans-serif;
 }
 
 .custom-signin:hover {
-    background-color: #54a346 !important;
+    background-color: #2c6c7bdc !important;
     color: #fff !important;
 }
 
@@ -248,7 +251,6 @@ a:focus {
     padding: 8px;
     margin: 0;
     background-color: #fff;
-    font-family: 'Rubik', sans-serif !important;
 }
 
 /*********************
@@ -390,9 +392,6 @@ a:focus {
 }
 
 .material-icons {
-    font-family: 'Rubik', sans-serif !important;
-    font-weight: normal;
-    font-style: normal;
     font-size: 24px;
     /* Preferred icon size */
     display: inline-block;
@@ -433,10 +432,6 @@ a:focus {
     text-transform: capitalize !important;
 }
 
-.socialIconContainer span {
-    font-family: 'Rubik', sans-serif !important;
-}
-
 .gap9 {
     gap: 11px;
 }
@@ -452,7 +447,7 @@ a:focus {
 .togglePasswordEye {
     cursor: pointer;
     position: relative;
-    bottom: 26px;
+    bottom: 36px;
     left: 9px;
 }
 
