fix: login-form gravity shadow margin

--- a/docs/style_login.css
+++ b/docs/style_login.css
@@ -91,6 +91,7 @@ a {
   border-radius: 8px;
   background: #ffffff;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
+  margin-bottom:20px;
 }
 
 .login-form form {
