--- a/docs/style_register.css
+++ b/docs/style_register.css
@@ -1,25 +1,83 @@
 body {
-  font-family: 'Rubik', sans-serif !important;
+  font-family: 'Montserrat', sans-serif;
+  background: linear-gradient(0deg, #ffffff, #ffffff), #ffffff;
 }
-.mdl-layout.mdl-js-layout {
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  color: #6f757e;
+}
+
+/**********
+ * HEADER *
+ **********/
+ .header {
+  background: rgba(255, 255, 255, 0.7);
+  border: 1px solid #e7e8e9;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.05);
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.header-logo {
+  margin-left: 160px;
+}
+
+.header-menu {
+  display: flex;
+  margin-right: 100px;
+}
+
+.menu-item {
+  margin-right: 3rem;
+}
+
+.menu-item a {
+  font-weight: 600;
+  font-size: 0.75rem;
+  line-height: 20px;
+  color: #6f757e;
+}
+
+/**************
+ * LOGIN FORM *
+ **************/
+
+ .mdl-layout.mdl-js-layout {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f7f7f7;
   color: #333;
-  font-size: 14px;
+  font-size: 0.875rem;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.mdl-layout {
+  height: auto;
 }
 
 .login-container {
-  width: 480px;
+  width: 80%;
+  max-width: 500px;
 }
 
 .login-form {
+  padding: 30px;
+  border-radius: 8px;
   background: #ffffff;
-  padding: 45px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 6px;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
+  margin-bottom:20px;
 }
 
 .login-form form {
@@ -33,17 +91,20 @@ body {
   flex-direction: column;
 }
 
-.login-form-title > label {
-  font-size: 28px;
-  font-weight: 400;
-  margin-bottom: 5px;
-  line-height: 1.1em;
+.login-step {
+  margin-left: 20px;
 }
 
-.grayColor {
-  color: #6e6b7b !important;
-  display: block;
-  margin-top: 4px;
+.login-form-title > label {
+  font-size: 1.75rem;
+  font-weight: 400;
+  margin-bottom: 5px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.login-form-title > span {
+  color: grey;
 }
 
 .login-form-actions {
@@ -59,16 +120,19 @@ body {
 
 .login-form-additional-actions {
   display: flex;
-  flex-direction: column;
-  margin-top: 10px;
-}
-
-a {
-  color: #54a346 !important;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 17px;
 }
 
 .login-form-additional-actions > div {
   margin: 5px;
+}
+.login-form-additional-actions > div a {
+  font-weight: 700;
+  font-size: 0.87rem;
+  line-height: 16px;
+  color: #2c6c7b;
 }
 
 .login-form-content .input-textfield {
@@ -78,13 +142,17 @@ a {
 }
 
 .login-form-content .input-textfield:last-child {
-  margin-bottom: 12px;
+  margin-bottom: 20px;
 }
 
 .login-form-content .input-textfield input {
-  border: 1px solid #e1e4e8;
-  padding: 10px;
-  font-size: 12px;
+  border: 1px solid #e7e8e9;
+  border-radius: 8px;
+  padding: 16px 12px;
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 24px;
+  color: #6f757e;
 }
 
 .login-error-info {
@@ -139,13 +207,13 @@ a:focus {
   min-width: 100px;
   color: #fff;
   padding: 0 22px;
-  background-color: #54a346;
+  background: #2c6c7b;
   border-radius: 5px;
-  font-family: 'Rubik', sans-serif !important;
+  font-family: 'Rubik', sans-serif ;
 }
 
 .custom-signin:hover {
-  background-color: #54a346 !important;
+  background-color: #2c6c7bdc ;
   color: #fff !important;
 }
 
@@ -265,14 +333,36 @@ a:focus {
   opacity: 0.4 !important;
   color: #fff !important;
   cursor: pointer !important;
-  background-color: #54a346 !important;
+  background-color: #2c6c7bdc !important;
+
 }
 .togglePasswordEye {
   cursor: pointer;
   position: relative;
-  bottom: 29px;
+  bottom: 40px;
   left: 9px;
 }
 .hidePassword {
   display: none;
+}
+
+@media (max-width: 820px) {
+  /* Enable sticky to stick the nav bar to the top*/
+
+  /* .header {
+        position: sticky;
+        top: 0;
+        z-index: 999;
+    } */
+    *{
+        font-size: 14px;
+    }
+
+  .header-logo {
+    margin-left: 20px;
+  }
+
+  .header-menu {
+    display: none;
+  }
 }
